alterações propriedades projeto

--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SpringBoot
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/screenmatch_frases
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${NOME_DB}
 spring.datasource.username=${USER_DB_POST}
 spring.datasource.password=${SENHA_DB}
 spring.datasource.driver-class-name=org.postgresql.Driver
